<resources>
    <string name="app_name">Calculadora Personalizable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="_eq">=</string>
    <string name="_dot">.</string>
    <string name="_clean">C</string>
    <string name="_plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_subtract">−</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_multiply">×</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_divide">÷</string>
    <string name="_delete">del</string>
    <string name="borrar">borrar</string>
    <string name="forma_de_botones">Forma de botones:</string>
    <string name="color_de_botones">Color de botones:</string>
    <string name="botones">Botones:</string>
    <string name="tama_o_de_fuente">Tamaño de fuente:</string>
    <string name="tipo_de_fuente">Tipo de fuente:</string>
    <string name="texto">Texto:</string>
    <string name="guardar">Guardar</string>
</resources>